--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb+srv://swasti:swasti123@cluster0.abcde.mongodb.net/prompt2plugin?retryWrites=true&w=majority
-JWT_SECRET=MySuperSecretKey123
-NODE_ENV=development
-OPENAI_API_KEY=sk-abc123xyz456fakekey
+MONGO_URI=
+JWT_SECRET=
+NODE_ENV=
+OPENAI_API_KEY=
